@@ -34,6 +34,7 @@ includeTemplate("overall.header");
  *	- Viewing comments for an album
 */
 ?>
+    <div class="g-headerbox">
 	<table class="g-header" cellspacing="0" cellpadding="0" width="100%">
 		<tr>
 			<td class="g-pagetitle-left"></td>
