@@ -1,3 +1,13 @@
+2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b2
+
+ * CHANGE: Add a new <div> "headerbox" in every .header file.
+           Ths makes it easier to block a header, but you now must set
+           a header box end!
+
+ * CHANGE: Languageselector!
+
+ * Change: Minor code cleanups.
+
 2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b1
 
  * Change: Some icon changed.
